--- a/DatingApp/appsettings.Development.json
+++ b/DatingApp/appsettings.Development.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data source=datingapp.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*",
+  "TokenKay": "super secreat unguessable key"
 }
