--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "CloudinarySettings": {
+    "CloudName": "dptbwlxf8",
+    "ApiKey": "763792893586855",
+    "ApiSeccreat": "cAK61dI4yJHwnO5RX4GTH6l0ytg"
+
+
+  },
   "AllowedHosts": "*"
 }
