--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -2,6 +2,7 @@
   "ConnectionStrings": {
     "DatabaseConnection": "Data source=datingapp.db"
   },
+  "TokenKay": "Super secret ungussesable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
