--- a/DatingApp/appsettings.json
+++ b/DatingApp/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DatabaseConnection": "Data source=datingapp.db"
   },
-  "TokenKay": "Super secret ungussesable key",
+  "TokenKey": "super secret unguessable key",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
